<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/imgViewMain"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/image"
            android:scaleType="centerCrop"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagen_principal" />

        <Button
            android:id="@+id/btnAnimImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animar_imagen"
            android:layout_marginBottom="24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="24dp"/>

        <!-- b) Sección de Audio -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnPlayAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reproducir"
                android:layout_marginEnd="16dp"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/btnPauseAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pausar" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="24dp"/>

        <!-- c) Sección de Video -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <VideoView
            android:id="@+id/videoViewMain"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnPlayVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_video"
            android:layout_marginBottom="24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="24dp"/>

        <!-- d) Sección de Animación -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animacion_icono"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <ImageView
            android:id="@+id/imgIconAnim"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@android:drawable/ic_menu_camera"
            app:tint="#2231FF"
            android:contentDescription="@string/icono_animado"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnStartIconAnim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girar_icono"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
</ScrollView>